--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
+    "react": "next",
+    "react-dom": "next",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.1",
     "rimble-ui": "^0.9.3",
     "styled-components": "^4.3.2",
@@ -14,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "rm -rf node_modules/*/.git/"
   },
   "eslintConfig": {
     "extends": "react-app"
