--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "formik": "^1.5.8",
     "react": "next",
     "react-dom": "next",
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.1",
+    "redux": "^4.0.4",
+    "redux-form": "^8.2.4",
     "rimble-ui": "^0.9.3",
     "styled-components": "^4.3.2",
-    "web3": "^1.0.0-beta.37"
+    "web3": "^1.0.0-beta.37",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
