--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "bignumber.js": "^9.0.0",
     "formik": "^1.5.8",
     "react": "next",
     "react-dom": "next",
